# hande

./: .default.nix  .depend  .envrc  .gitignore  .gitignore.BASE.7562.gitignore  .gitlab-ci.yml  .mailmap  .make_helper  .readthedocs.yaml  .travis.yml  2  CMakeLists.txt  LICENSE  Makefile  README.rst  cmakeconfig.py  comb.f90  const.f90  default.nix  environment_report.F90  error  error_handling.F90  hande.nix  hubbard.cpp  hubbard.f90  hubbard_core.f90  input.F90  input.inp  kpoints.f90  mkconfig.py  mrgref.f90  parallel.f90  parse_input.F90  requirements.txt  setup.py  submit.sh  system.f90  todo  todo.joe
.ci/: Make.inc.patch  cmake.sh  hdf5.sh  install_deps.sh  lapack.sh  lua.sh  openmpi.sh  scalapack.sh  trlan.sh
.circleci/: Dockerfile  config.yml  run_commands
.github/workflows/: docker-image-for-circle-ci.yml
cmake/: README.md  autocmake.yml  update.py
cmake/autocmake/: __init__.py  configure.py  extract.py  generate.py  interpolate.py  parse_rst.py  parse_yaml.py
cmake/custom/: FindLua.cmake  backtrace.cmake  build_info.cmake  build_info.h.in  detsize.cmake  dsfmt.cmake  dsfmt_mexp.cmake  (+23 more)
conf/: ifort
config/: altix_jaist  archer  asan  cerebro  cerebro.mpi  circleci.linux  cmth  cmth.mpi  cmth.mpi.pop64  cuc3.intel13.mpi  cuc3.intel13.mpi.pop64  cuc3.intel13.mpi.sp  cuc3.intel13.omp  cx1  cx1.omp  cx2  cx2.omp  cygwin32.gfortran  daint  dora  gfortran  gfortran.acml  gfortran.basic  gfortran.lapack.mpi  gfortran.mkl.mpi  gfortran.mkl.mpi.pop64  gfortran.sp  gfortran4.1  ifort  ifort.mpi  ifort_mpi  kenta_mac  mac  mac.mpi  minazo  rosa  shaheen  travis  travis.linux  travis.macosx
docs/: api.rst  conf.py  index.rst  pyblock.blocking.rst  pyblock.plot.rst  pyblock.rst  tutorial.ipynb  tutorial.rst
documentation/: Makefile  README  bibliography.rst  conf.py  hubbard.rst  index.rst  input.rst  modifications_to_imperial_code_by_will_handley  quickstart.rst
lib/: CMakeLists.txt  Makefile  MurmurHash2.cpp  README  comb.f90  dSFMT_interface.f90  dSFMT_wrapper.h  environment_report.F90  error_handling.F90  fnv_hash.cpp  hash.f90  parallel.F90  trl_info.f90  utils.f90
lib/aotus/: CMakeLists.txt  COPYRIGHT  README.md
lib/aotus-5.2/: README.md
lib/aotus-5.2/LuaFortran/: README  dump_lua_fif_module.f90  flu_binding.f90
lib/aotus-5.2/source/: aot_fun_module.f90  aot_kinds_module.f90  aot_out_general_module.f90  aot_table_ops_module.f90  aot_top_module.f90  dummy_extdouble_out_module.f90  dummy_extdouble_table_module.f90  dummy_extdouble_vector_module.f90  dummy_quadruple_out_module.f90  dummy_quadruple_table_module.f90  dummy_quadruple_top_module.f90
lib/aotus/LuaFortran/: COPYRIGHT  flu_binding.f90  flu_kinds_module.f90  lua_fif.f90  lua_parameters.f90  wrap_lua_dump.c
lib/aotus/source/: COPYRIGHT  aot_err_module.f90  aot_fun_declaration_module.f90  aot_out_module.f90  aot_path_module.f90  aot_references_module.f90  aot_table_module.f90  aot_table_ops_module.f90  aot_vector_module.f90  aotus_module.f90  dummy_extdouble_fun_module.f90  dummy_extdouble_top_module.f90  dummy_quadruple_fun_module.f90  dummy_quadruple_vector_module.f90
lib/cephes/: CMakeLists.txt  psi.c  readme
lib/dSFMT/: dSFMT_interface.f90  dSFMT_wrapper.cpp
lib/dSFMT-src-2.2.3/: README.txt  dSFMT.h  dSFMT_str_state.c
lib/dSFMT_F03_interface/: LICENSE.txt  dSFMT_interface.F90  dSFMT_utils.c
lib/local/: CMakeLists.txt  Makefile  alias.f90  base_types.f90  bit_table_256.f90  bit_tables.f90  checking.f90  csr.f90  environment_report.F90  error_handling.F90  git_info.f90.in  hash.f90  hash_table.f90  hdf5_helper.F90  input.F90  json_out.f90  linalg.F90  parallel.F90  print_info.c  print_info.c.in  ranking.f90  shmem.F90  shmem_mmap.c  utils.F90  utils.f90
pyblock/: __init__.py  blocking.py  error.py  pd_utils.py
src/: CMakeLists.txt  Makefile  abelian_symmetry.f90  annihilation.F90  annihilation.f90  basis.f90  basis_types.f90  bit_utils.F90  bit_utils.f90  blocking.F90  blocking.f90  bloom_hander.F90  bloom_hander.f90  bloom_handler.F90  calc.F90  calc.f90  calc_system_init.f90  canonical_energy_estimates.F90  canonical_estimates.F90  canonical_kinetic_energy.F90  ccmc.F90  ccmc.f90  ccmc_data.F90  ccmc_data.f90  ccmc_death_spawning.f90  ccmc_linked.f90  ccmc_multispawn.F90  ccmc_selection.f90  ccmc_utils.F90  ccmc_utils.f90  cdefs.h  check_input.F90  check_input.f90  chem_pot.f90  const.F90  const.f90  core.f90  ct_fciqmc.F90  ct_fciqmc.f90  dealloc.F90  (+151 more)
src/ccmc/: CMakeLists.txt  ccmc_death_spawning.f90  ccmc_linked.f90
src/core/: CMakeLists.txt  basis_types.f90  canonical_estimates.F90  hande_top_level.f90  logging.f90  molecular_integral_types.f90  non_blocking_comm.F90  proc_pointers.f90  restart_hdf5.F90
src/determinants/: CMakeLists.txt  determinant_enumeration.f90  excit_gen_op_hub_k.f90  excit_gen_real_lattice.f90
src/dmqmc/: CMakeLists.txt  dmqmc_data.f90
src/fci/: CMakeLists.txt  fci_lanczos.F90  simple_fciqmc.f90
src/hamiltonian/: CMakeLists.txt  hamiltonian.f90  hamiltonian_chung_landau.f90  hamiltonian_ringium.f90  operators.F90
src/hellmann_feynman_sampling/: CMakeLists.txt  hfs_data.f90
src/importance_sampling/: CMakeLists.txt  importance_sampling.f90
src/lua_bindings/: CMakeLists.txt  test.f90
src/qmc/: CMakeLists.txt  annihilation.f90  spawning.F90
src/system/: CMakeLists.txt  hamiltonian_data.f90  hubbard_k.f90  kpoints.f90  molecular_integrals.F90  momentum_sym_read_in.f90  momentum_symmetry.f90  real_lattice.f90
src/top_level/: CMakeLists.txt  check_input.f90  dealloc.F90
test_suite/: jobconfig  userconfig
tests/: test_error.py
tools/: 1D_hubbard_gs.py  1D_hubbard_gs.sh  README  analyse_ccmc_fciqmc.py  analyse_rdm_eigv.py  average_beta.py  average_entropy.py  average_rdm.py  blocking.py  check_distribute.py  check_keywords.py  check_keywords.sh  configurator.py  convert_input.sh  extract.py  hamil_colourmap.py  join_rdms.sh  mkconfig.py  plot_dynamics.py  plot_excit_dist.py  propogate_fci.py  reblock_hande.py  reblock_hybrid.py  send_softexit.py  sfmakedepend  undocumented_keywords.sh  watchdog.py  whole_rdm_analysis.sh  wu_lieb.m
(+4374 files in other folders)
